fixed website bugs

--- a/results.css
+++ b/results.css
@@ -5,6 +5,7 @@ header h1 {
 
 header {
   background-image: ;
+  /*background-color: rgb(94, 120, 238);*/
   padding-left: 500px;
   padding-right: 500px;
   padding-top: 50px;
